Moved Leaderboard above Tweets on home page and fixed bug: upcoming rounds bug not showing today's round.

--- a/src/TheParkingLot/wwwroot/css/site.css
+++ b/src/TheParkingLot/wwwroot/css/site.css
@@ -70,3 +70,8 @@ a.navbar-brand {
      text-align: right; 
      margin-top: 20px;
 }
+
+#leaderboard {
+    clear: both;
+    padding-top: 10px;
+}
